[package]
name = "cyber_wave"
version = "0.0.1"
description = "cyber-wave main program"
authors = ["Cyber-Wave <bakjuna@gmail.com>"]
repository = "https://github.com/Cyber-Wave-NFT/cyber-wave-anchor"
license = "Apache-2.0"
homepage = "https://cyber-wave.io/"
edition = "2018"

[lib]
name = "cyber_wave"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = "0.19.0"
solana-program = "=1.9.2"
sha256 = "1.0.3"
pyth-client = "0.2.2"
arrayref = "0.3.6"
bytemuck = { version = "1.4.0" }