[package]
name = "wave_size_calculation"
version = "0.0.1"
description = "cyber-wave wave size calculation program"
authors = ["Cyber-Wave <bakjuna@gmail.com>"]
repository = "https://github.com/Cyber-Wave-NFT/cyber-wave-anchor"
license = "Apache-2.0"
homepage = "https://cyber-wave.io/"
edition = "2021"

[lib]
name = "wave_size_calculation"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
solana-client = "1.7.2"
solana-program = "1.8.5"
solana-sdk = "1.8.5"
dao = {path="../dao", features=["cpi"]}